--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			<script src="js/bootstrap.js"></script>
 			<script src="js/main.js"></script>
 			<script src="js/jquery.main.js"></script>
-			<script src="http://gravityscript.googlecode.com/svn/trunk/throw.js"></script>
+			<script src="//gravityscript.googlecode.com/svn/trunk/throw.js"></script>
 			<script type="text/javascript">
 			
 			  var _gaq = _gaq || [];
